# nexus

./: .gitignore  Cargo.toml  README.md
benches/: chunker_bench.rs
src/: lib.rs  main.rs
src/cli/: conflicts.rs  device.rs  folder.rs  init.rs  mod.rs  serve.rs  status.rs
src/config/: device.rs  folder.rs  mod.rs  settings.rs
src/crypto/: cipher.rs  identity.rs  mod.rs  session.rs
src/discovery/: global.rs  local.rs  mod.rs  stun.rs
src/index/: diff.rs  entry.rs  folder.rs  mod.rs  scanner.rs  watcher.rs
src/network/: connection.rs  mod.rs  protocol.rs
src/storage/: block.rs  cache.rs  chunker.rs  mod.rs  store.rs
src/sync/: conflict.rs  engine.rs  mod.rs  progress.rs  selective.rs  transfer.rs
